--- a/package.xml
+++ b/package.xml
@@ -54,19 +54,22 @@
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>vrpn_client_ros</build_depend>
-  <build_depend>turtlebot3</build_depend>
+  <build_depend>turtlebot3_bringup</build_depend>
+  <build_depend>turtlebot3_navigation</build_depend>
   <build_export_depend>move_base</build_export_depend>
   <build_export_depend>nav_msgs</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>vrpn_client_ros</build_export_depend>
-  <build_export_depend>turtlebot3</build_export_depend>
+  <build_export_depend>turtlebot3_bringup</build_export_depend>
+  <build_export_depend>turtlebot3_navigation</build_export_depend>
   <exec_depend>move_base</exec_depend>
   <exec_depend>nav_msgs</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>vrpn_client_ros</exec_depend>
-  <exec_depend>turtlebot3</exec_depend>
+  <exec_depend>turtlebot3_bringup</exec_depend>
+  <exec_depend>turtlebot3_navigation</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
