--- a/package.xml
+++ b/package.xml
@@ -51,6 +51,7 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>move_base</build_depend>
   <build_depend>nav_msgs</build_depend>
+  <build_depend>geometry_msgs</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>vrpn_client_ros</build_depend>
@@ -58,6 +59,7 @@
   <build_depend>turtlebot3_navigation</build_depend>
   <build_export_depend>move_base</build_export_depend>
   <build_export_depend>nav_msgs</build_export_depend>
+  <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>vrpn_client_ros</build_export_depend>
@@ -65,6 +67,7 @@
   <build_export_depend>turtlebot3_navigation</build_export_depend>
   <exec_depend>move_base</exec_depend>
   <exec_depend>nav_msgs</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>vrpn_client_ros</exec_depend>
