--- a/package.xml
+++ b/package.xml
@@ -57,6 +57,7 @@
   <build_depend>vrpn_client_ros</build_depend>
   <build_depend>turtlebot3_bringup</build_depend>
   <build_depend>turtlebot3_navigation</build_depend>
+  <build_depend>navlab_turtlebot_planning</build_depend>
   <build_export_depend>move_base</build_export_depend>
   <build_export_depend>nav_msgs</build_export_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
@@ -65,6 +66,7 @@
   <build_export_depend>vrpn_client_ros</build_export_depend>
   <build_export_depend>turtlebot3_bringup</build_export_depend>
   <build_export_depend>turtlebot3_navigation</build_export_depend>
+  <build_export_depend>navlab_turtlebot_planning</build_export_depend>
   <exec_depend>move_base</exec_depend>
   <exec_depend>nav_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
@@ -73,6 +75,7 @@
   <exec_depend>vrpn_client_ros</exec_depend>
   <exec_depend>turtlebot3_bringup</exec_depend>
   <exec_depend>turtlebot3_navigation</exec_depend>
+  <exec_depend>navlab_turtlebot_planning</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
