add vrpn client, restructure as metapackage

--- a/navlab_turtlebot_sim/CMakeLists.txt
+++ b/navlab_turtlebot_sim/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(navlab_turtlebot_base)
+project(navlab_turtlebot_sim)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
@@ -8,13 +8,8 @@ project(navlab_turtlebot_base)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-  navlab_turtlebot_planning
-  move_base
-  nav_msgs
-  geometry_msgs
   rospy
   std_msgs
-  vrpn_client_ros
 )
 
 ## System dependencies are found with CMake's conventions
@@ -108,7 +103,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES navlab_turtlebot_base
+#  LIBRARIES navlab_turtlebot_sim
 #  CATKIN_DEPENDS move_base nav_msgs rospy std_msgs vrpn_client_ros
 #  DEPENDS system_lib
 )
@@ -126,7 +121,7 @@ include_directories(
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/navlab_turtlebot_base.cpp
+#   src/${PROJECT_NAME}/navlab_turtlebot_sim.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -137,7 +132,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/navlab_turtlebot_base_node.cpp)
+# add_executable(${PROJECT_NAME}_node src/navlab_turtlebot_sim_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -201,7 +196,7 @@ include_directories(
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_navlab_turtlebot_base.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_navlab_turtlebot_sim.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
