--- a/navlab_turtlebot_sim/package.xml
+++ b/navlab_turtlebot_sim/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>navlab_turtlebot_base</name>
+  <name>navlab_turtlebot_sim</name>
   <version>0.0.0</version>
-  <description>The navlab_turtlebot_base package</description>
+  <description>The navlab_turtlebot_sim package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/navlab_turtlebot_base</url> -->
+  <!-- <url type="website">http://wiki.ros.org/navlab_turtlebot_sim</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
@@ -49,33 +49,12 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>move_base</build_depend>
-  <build_depend>nav_msgs</build_depend>
-  <build_depend>geometry_msgs</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
-  <build_depend>vrpn_client_ros</build_depend>
-  <build_depend>turtlebot3_bringup</build_depend>
-  <build_depend>turtlebot3_navigation</build_depend>
-  <build_depend>navlab_turtlebot_planning</build_depend>
-  <build_export_depend>move_base</build_export_depend>
-  <build_export_depend>nav_msgs</build_export_depend>
-  <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
-  <build_export_depend>vrpn_client_ros</build_export_depend>
-  <build_export_depend>turtlebot3_bringup</build_export_depend>
-  <build_export_depend>turtlebot3_navigation</build_export_depend>
-  <build_export_depend>navlab_turtlebot_planning</build_export_depend>
-  <exec_depend>move_base</exec_depend>
-  <exec_depend>nav_msgs</exec_depend>
-  <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
-  <exec_depend>vrpn_client_ros</exec_depend>
-  <exec_depend>turtlebot3_bringup</exec_depend>
-  <exec_depend>turtlebot3_navigation</exec_depend>
-  <exec_depend>navlab_turtlebot_planning</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
