--- a/vrpn_odom_ros/package.xml
+++ b/vrpn_odom_ros/package.xml
@@ -11,7 +11,9 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <depend>geometry_msgs</depend>
+  <depend>nav_msgs</depend>
   <depend>roscpp</depend>
+  <depend>rospy</depend>
   <depend>tf2_ros</depend>
   <depend>vrpn</depend>
 
